# mini-agi

./: Add-confidence.sh  Project-vision.md  README.md  Reader.md  init.sh  novelty.sh  pyproject.toml  setup.sh  step2.sh
data/: ._motifs.json  motifs.json
experiments/: state.json
experiments/logs/: novelty_cycle_0.json  novelty_cycle_1.json
scripts/: motif_to_chroma.py  run_cli.py
src/symbolic_recursion/core/: chroma_router.py  model_stub.py  motif.py  ollama_interface.py  router.py  runtime_policy.py  storage.py  vector_router.py
src/symbolic_recursion/data/: motifs.json
src/symbolic_recursion/embeddings/: embedder.py  sbert.py
src/symbolic_recursion/experiments/: analyze_existing.py  multi_run.py  run_loop_novelty.py  scenario.json  topics.json
src/symbolic_recursion/threads/: manager.py
src/symbolic_recursion/threads/examples/: justice_thread.py
src/symbolic_recursion/utils/: __init__.py  confidence.py  context.py  metrics.py  novelty.py
symbolic-memory-core/: main.py
symbolic-memory-core/core/: motif.py  ollama_interface.py  router.py  storage.py
symbolic-memory-core/data/: motifs.json
symbolic-memory-core/docs/: Novelty.md
symbolic-memory-core/embeddings/: embedder.py
symbolic-memory-core/experiments/: report_novelty.py  run_loop_novelty.py
symbolic-memory-core/threads/: manager.py
symbolic-memory-core/threads/examples/: justice_thread.py
symbolic-memory-core/utils/: confidence.py  novelty.py
